<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">MTGCounter</string>
    <!-- SetupActivity -->
    <string name="setup">Setup</string>
    <string name="setup_number_players">Number of Players:</string>
    <string name="setup_default_number_players">2</string>
    <string name="setup_3_players">3</string>
    <string name="setup_4_players">4</string>
    <string name="setup_enter_names">Enter Player Names:</string>
    <string name="button_setup_p1_label">Player 1</string>
    <string name="button_setup_p2_label">Player 2</string>
    <string name="button_setup_p3_label">Player 3</string>
    <string name="button_setup_p4_label">Player 4</string>
    <string name="setup_initial_life">Initial Life: 20</string>
    <string name="button_setup_continue_label">Continue Previous Game</string>
    <string name="button_setup_mana_submit_label">Save</string>
    <string name="checkbox_setup_team_together_label">Team Together</string>
    <string name="mana_colorless">&#32;&#32;Colorless</string>
    <string name="mana_white">&#32;&#32;White</string>
    <string name="mana_blue">&#32;&#32;Blue</string>
    <string name="mana_black">&#32;&#32;Black</string>
    <string name="mana_red">&#32;&#32;Red</string>
    <string name="mana_green">&#32;&#32;Green</string>
    <!-- MainActivity -->
    <string name="button_plus1">+1</string>
    <string name="button_plus5">+5</string>
    <string name="button_minus1">-1</string>
    <string name="button_minus5">-5</string>
    <!-- Menus -->
    <string name="menu_done_label">Done</string>
    <string name="menu_working_label">Working…</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_shuffle_players_label">Shuffle Players</string>
    <string name="menu_random_player_label">Pick Random Player</string>
    <!-- Settings -->
    <string name="prefs_title">MTGCounter Settings</string>
    <string name="immersive_mode_title">Fullscreen</string>
    <string name="immersive_mode_summaryOn">The counter activity will be fullscreen.</string>
    <string name="immersive_mode_summaryOff">The counter activity will not be fullscreen.</string>
    <string name="life_counter_touchable_title">Life Counter Touchable</string>
    <string name="life_counter_touchable_summaryOn">Life can be adjusted by using the buttons or moving the life scrollbar.</string>
    <string name="life_counter_touchable_summaryOff">Life can only be adjusted by using the buttons, not by moving the life scrollbar.</string>
    <string-array name="icon_dropdown_options">
        <item>Colorless</item>
        <item>Forest</item>
        <item>Island</item>
        <item>Mountain</item>
        <item>Plains</item>
        <item>Swamp</item>
    </string-array>

</resources>