<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_setup_working"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_working_label"/>
    <item
        android:id="@+id/menu_setup_done"
        android:alphabeticShortcut="d"
        android:icon="@drawable/ic_menu_done"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_done_label"/>
    <item
        android:id="@+id/menu_setup_shuffle_players"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_shuffle_players_label"/>
    <item
        android:id="@+id/menu_setup_settings"
        android:alphabeticShortcut="s"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_settings_label"/>

</menu>