<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioGroup
        android:id="@+id/radiogroup_setup_mana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <RadioButton
            android:id="@+id/radio_setup_mana_colorless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableLeft="@drawable/mana_colorless"
            android:padding="8dp"
            android:text="@string/mana_colorless" />
        
        <RadioButton
            android:id="@+id/radio_setup_mana_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mana_white"
            android:padding="8dp"
            android:text="@string/mana_white" />

        <RadioButton
            android:id="@+id/radio_setup_mana_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mana_blue"
            android:padding="8dp"
            android:text="@string/mana_blue" />

        <RadioButton
            android:id="@+id/radio_setup_mana_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mana_black"
            android:padding="8dp"
            android:text="@string/mana_black" />

        <RadioButton
            android:id="@+id/radio_setup_mana_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mana_red"
            android:padding="8dp"
            android:text="@string/mana_red" />

        <RadioButton
            android:id="@+id/radio_setup_mana_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mana_green"
            android:padding="8dp"
            android:text="@string/mana_green" />
    </RadioGroup>

</ScrollView>