<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/deck"
    android:orientation="horizontal"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/setup_number_players"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup_setup_number_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_setup_2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/setup_default_number_players" />

            <RadioButton
                android:id="@+id/radio_setup_3p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/setup_3_players" />

            <RadioButton
                android:id="@+id/radio_setup_4p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_4_players" />
        </RadioGroup>

        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/setup_enter_names"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/tableLayout1"  
		    android:layout_width="match_parent"  
		    android:layout_height="match_parent"  
		    android:shrinkColumns="*"  
		    android:stretchColumns="*"> 
        
            <TableRow
                android:id="@+id/player1"  
		        android:layout_height="wrap_content"  
		        android:layout_width="match_parent"  
		        android:gravity="center_horizontal">  
                
		        <Button
		            android:id="@+id/button_setup_p1"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:text="@string/button_setup_p1_label"
		            android:layout_weight="1" />
		        
		        <Spinner
				    android:id="@+id/player1_icon_spinner"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:drawSelectorOnTop="true"
				    android:entries="@array/icon_dropdown_options"
				    android:layout_weight="1" />
		    </TableRow>
		
            <TableRow
                android:id="@+id/player2"  
		        android:layout_height="wrap_content"  
		        android:layout_width="match_parent"  
		        android:gravity="center_horizontal">  
		        
		        <Button
		            android:id="@+id/button_setup_p2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/button_setup_p2_label"
		            android:layout_weight="1" />
		        
		        <Spinner
				    android:id="@+id/player2_icon_spinner"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:drawSelectorOnTop="true"
				    android:entries="@array/icon_dropdown_options"
				    android:layout_weight="1" />
			</TableRow>
		    
            <TableRow
                android:id="@+id/player3"  
		        android:layout_height="wrap_content"  
		        android:layout_width="match_parent"  
		        android:gravity="center_horizontal">  
            
		        <Button
		            android:id="@+id/button_setup_p3"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:enabled="false"
		            android:text="@string/button_setup_p3_label"
		            android:layout_weight="1" />
		        
		        <Spinner
				    android:id="@+id/player3_icon_spinner"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:drawSelectorOnTop="true"
				    android:entries="@array/icon_dropdown_options"
				    android:layout_weight="1" />
		    </TableRow>
			
            <TableRow
                android:id="@+id/player4"  
		        android:layout_height="wrap_content"  
		        android:layout_width="match_parent"  
		        android:gravity="center_horizontal">
		          
		        <Button
		            android:id="@+id/button_setup_p4"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:enabled="false"
		            android:text="@string/button_setup_p4_label"
		            android:layout_weight="1" />
		        
		        <Spinner
				    android:id="@+id/player4_icon_spinner"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:drawSelectorOnTop="true"
				    android:entries="@array/icon_dropdown_options"
				    android:layout_weight="1" />
		    </TableRow>
	        
	    </TableLayout>

        <TextView
            android:id="@+id/textview_setup_initial_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/setup_initial_life"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekbar_setup_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="40"
            android:progress="20" />
    </LinearLayout>

</ScrollView>